# docker_sync

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: ssht.yaml  verify.yaml
docker_sync/: __main__.py  dt.py
docker_sync/images/: ssht.json  verify.json
