[tool.poetry]
name = "docker_sync"
version = "0.1.0"
description = ""
authors = ["dev <dev@qiyutech.tech>"]

[tool.poetry.dependencies]
python = "^3.9"

click = ">=8,<9"
pydantic = ">=1.7,<2.0"

[tool.poetry.dev-dependencies]
black = "*"
pytest = "*"
pylama = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
